# perf-gate-agent

./: .env  .gitignore  README.md  perf-gate.yml  pyproject.toml  requirements.txt
.github/workflows/: perf-gate.yml
docs/: HISTORY_AND_JIRA.md  WINDOWS.md
examples/: sample-report.md
perf_gate/: __init__.py  cli.py  config.py  diff.py  jira_client.py  report.py  storage.py
perf_gate/detectors/: __init__.py  base.py  c_rules.py  csharp_rules.py  frontend_rules.py  java_rules.py  node_rules.py  python_rules.py  sql_rules.py
perf_gate/knowledge/: __init__.py  kb.py
perf_gate/llm/: __init__.py  client.py  reviewer.py
tests/: test_detectors.py  test_history_jira.py  test_new_languages.py  test_security.py
